begun returning task_logs from nextflow workflows